# LLMeter

./: .gitignore  README.md  deny.toml  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI.md  CLI_MANUAL.md  PROJECT_STRUCTURE.md  SPEC.md  TEST_PLAN.md  TODO.md
scripts/: llmeter-cli.mjs  stage-llama-server.mjs
src/: constants.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/llama/darwin-arm64/lib/: libggml-base.0.10.0.dylib  libggml-base.0.dylib  libggml.0.10.0.dylib  libggml.0.dylib  libllama.0.0.8950.dylib  libllama.0.dylib  libmtmd.0.0.8950.dylib  libmtmd.0.dylib  libssl.3.dylib
src-tauri/src/: auth.rs  cli.rs  db.rs  inference.rs  lib.rs  llama_bundle.rs  main.rs  model_runtime.rs  server.rs  types.rs
src-tauri/web/: dashboard.css  dashboard.js  index.html
src/components/: Bi.tsx  InferenceParams.tsx  Markdown.tsx  common.tsx
src/hooks/: useAsyncData.ts
src/lib/: format.ts  pagination.ts
src/pages/: Admin.tsx  Auth.tsx  Chat.tsx  Dashboard.tsx  Logs.tsx  Models.tsx  Profile.tsx  Settings.tsx
src/styles/: auth.css  base.css  chat.css  components.css  dashboard.css  index.css  layout.css  models.css  settings.css
