[package]
name = "llmeter"
version = "0.1.0"
description = "Commercializable local LLM desktop server"
authors = ["LLMeter"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "llmeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llmeter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
rand = "0.9.2"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "sync", "net", "time", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sysinfo = "0.33"
